[package]
name = "nibble"
version = "0.2.0"
authors = ["monokh <mnokhb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.1"
generic-array = "0.14.2"
typenum = "1.12.0"
clap = "2.33.1"

[dependencies.secp256k1] 
version = "0.17.2"
features = ["rand-std"]


