[package]
name = "nibble"
version = "0.2.0"
authors = ["monokh <mnokhb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.1"
generic-array = "0.14.2"
typenum = "1.12.0"
clap = "2.33.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
jsonrpc-core = "14.2.0"
jsonrpc-http-server = "14.2.0"
jsonrpc-derive = "14.2.1"
rocksdb = "0.14.0"
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-core-client = "14.2.0"

[dependencies.secp256k1] 
version = "0.17.2"
features = ["rand-std", "serde"]
